--- a/Resources/styles/index.css
+++ b/Resources/styles/index.css
@@ -130,3 +130,9 @@ h1, h2, h3, h4 {
 
   padding: 0.5em;
 }
+
+.startTimeExpansionArrow {
+    height: 20px;
+    margin-left: 20px;
+    vertical-align: bottom;
+}
