--- a/Resources/styles/index.css
+++ b/Resources/styles/index.css
@@ -134,5 +134,5 @@ h1, h2, h3, h4 {
 .startTimeExpansionArrow {
     height: 20px;
     margin-left: 20px;
-    vertical-align: bottom;
+    vertical-align: top;
 }
