--- a/Resources/styles/index.css
+++ b/Resources/styles/index.css
@@ -136,3 +136,8 @@ h1, h2, h3, h4 {
     margin-left: 20px;
     vertical-align: top;
 }
+.sessionTitleExpansionArrow {
+    height: 16px;
+    margin-left: 20px;
+    vertical-align: top;
+}
